test/visibility/private/uses/accessMulti1.good
accessMulti1.chpl:3: error: unresolved call 'b()'
